--- a/src/app/components/cards/cards-goalkeepers/cards-goalkeepers.component.html
+++ b/src/app/components/cards/cards-goalkeepers/cards-goalkeepers.component.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="stats_goalkeepers">
                     <p class="stats_title">{{ 'team.clean-sheets' | translate }}</p>
-                    <p class="stats_number">{{goalkeeper.cleenSheets}}</p>
+                    <p class="stats_number">{{goalkeeper.cleanSheets}}</p>
                 </div>
                 <div class="stats_goalkeepers">
                     <p class="stats_title">{{ 'team.saves' | translate }}</p>
