--- a/src/app/components/details/goalkeepers-details/goalkeepers-details.component.html
+++ b/src/app/components/details/goalkeepers-details/goalkeepers-details.component.html
@@ -28,11 +28,26 @@
                 </div>
                 <div class="player-hero__stats--single-stat">
                     <li class="player-hero__stats-item">
-                        <div class="stats_title">{{ 'team.assists' | translate }}</div>
+                        <div class="stats_title">{{ 'team.saves' | translate }}</div>
                         <div class="stats_number">{{ goalkeeper.saves }}</div>
                     </li>
                 </div>
             </ul>
+        </div>
+
+        <div class="player_biography">
+            <div class="biography_header"></div>
+            <div class="player_bio">
+                <div class="content_media">
+                    <img class="player_bio_img" [src]="goalkeeper.bioImg">
+                </div>
+                <div class="content_text">
+                    <div class="bio_title" *ngIf="getLang()=='en'">{{ goalkeeper.bioTitleEn  }}</div>
+                    <div class="bio_title" *ngIf="getLang()=='es'">{{ goalkeeper.bioTitleEs  }}</div>
+                    <div class="bio_text" *ngIf="getLang()=='en'">{{ goalkeeper.bioTextEn  }}</div>
+                    <div class="bio_text" *ngIf="getLang()=='es'">{{ goalkeeper.bioTextEs  }}</div>
+                </div>
+            </div>
         </div>
 
         <div class="go_back">
