--- a/src/app/components/cards/cards-field-players/cards-field-players.component.html
+++ b/src/app/components/cards/cards-field-players/cards-field-players.component.html
@@ -1,5 +1,5 @@
 <div class="itemBox">
-    <a [routerLink]='"fieldPlayer/" + fieldPlayer.name + "/"  + fieldPlayer.id'>
+    <a [routerLink]='"fieldPlayer/" + fieldPlayer.id'>
         <img [src]="fieldPlayer.img">
 
         <figcaption class="team-person__text">
