--- a/src/app/components/cards/cards-goalkeepers/cards-goalkeepers.component.html
+++ b/src/app/components/cards/cards-goalkeepers/cards-goalkeepers.component.html
@@ -1,5 +1,5 @@
 <div class="itemBox">
-    <a [routerLink]='"goalkeeper/" + goalkeeper.name + "/"  + goalkeeper.id'>
+    <a [routerLink]='"goalkeeper/" + goalkeeper.id'>
         <img [src]="goalkeeper.img">
 
         <figcaption class="team-person__text">
