--- a/src/app/components/details/goalkeepers-details/goalkeepers-details.component.scss
+++ b/src/app/components/details/goalkeepers-details/goalkeepers-details.component.scss
@@ -1,308 +1,1 @@
-* {
-    font-family: fcb-extra-bold, Arial, Helvetica Neue, Helvetica, sans-serif;
-}
-
-.player_page {
-    background: linear-gradient(247deg, #181733, #154284);
-}
-
-.player_hero_wrapper {
-    height: 100%;
-    padding: 0 1rem;
-    min-height: calc(98vh - 16.8rem);
-    padding-top: 2rem;
-    position: relative;
-}
-
-.team_navigation {
-    display: flex;
-    justify-content: center;
-}
-
-.player_img {
-    width: 300px;
-}
-
-.player_info {
-    background-color: rgba(8, 14, 31, .9);
-    border-radius: 10px 10px 0 0;
-    padding: 20px 0px;
-    max-width: 400px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.player_position {
-    text-align: center;
-    color: white;
-    text-transform: uppercase;
-    opacity: .8;
-    font-weight: bold;
-}
-
-.player_hero_name {
-    margin-bottom: 0.5rem;
-    text-align: center;
-}
-
-.player_number {
-    background: linear-gradient(180deg, #fff, hsla(0, 0%, 100%, .6));
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-    color: #fff;
-    font-size: 3rem;
-    font-weight: bold;
-}
-
-.player_name {
-    font-size: 3rem;
-    color: #fff;
-}
-
-.container_player_stats {
-    background-color: rgba(8, 14, 31, .9);
-    max-width: 400px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 0px 0px 2rem 0px;
-    text-align: center;
-}
-
-ul {
-    padding-left: 0;
-    margin-top: 0;
-    margin-bottom: 0;
-}
-
-.player_stats {
-    display: flex;
-    text-transform: uppercase;
-    justify-content: space-around;
-}
-
-.player-hero__stats-item {
-    display: flex;
-    flex-direction: column;
-}
-
-.stats_title {
-    color: #fff;
-}
-
-.stats_number {
-    color: #fdc52c;
-    font-size: 2.5rem;
-    font-weight: bold;
-}
-
-.go_back {
-    display: flex;
-    justify-content: center;
-}
-
-.player-nav_btn {
-    background: #fff;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    fill: #727272;
-    color: #0a0927;
-    font-size: 1.2rem;
-    font-weight: bold;
-    text-transform: uppercase;
-    text-decoration: none;
-    margin-top: 1.5rem;
-    margin-bottom: 1.5rem;
-    border-radius: 0.2rem;
-    border: none;
-}
-
-.player-nav_btn:hover {
-    cursor: pointer;
-}
-
-.icon {
-    width: 1.6rem;
-    height: 1.6rem;
-    padding: 5px;
-}
-
-.player-nav_btn-title {
-    padding: 5px;
-}
-
-.player-nav_btn:hover {
-    fill: #fff;
-    background: rgba(8, 14, 31, .9);
-    color: #fff;
-}
-
-.player_biography {
-    transform: translateY(-20px);
-    max-width: 400px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.biography_header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    color: #222;
-    padding: 1.6rem;
-    border-radius: 1.6rem 1.6rem 0 0;
-    box-shadow: 0 -.4rem .4rem 0rgba(0, 0, 0, .2);
-    background: #fff;
-}
-
-.player_bio {
-    background: #fff;
-    margin: 0;
-    padding: 0;
-    border-radius: 0px 0px 10px 10px;
-    border-radius: 0 0 1.6rem 1.6rem;
-}
-
-.content_media {
-    padding: 25px;
-    background-image: url("../../../../assets/images/stripes-content-promo.png");
-    background-size: contain;
-    background-repeat: no-repeat;
-}
-
-.player_bio_img {
-    max-width: 350px;
-}
-
-.content_text {
-    padding: 0.8rem 1.6rem;
-}
-
-.bio_title {
-    font-size: 1.8rem;
-    font-weight: bold;
-    line-height: 2.2rem;
-    background: linear-gradient(90deg, #cd122d, #154284);
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-    color: #fff;
-    margin-bottom: 1rem;
-}
-
-.bio_text {
-    height: auto;
-    font-size: 1.4rem;
-    line-height: 2rem;
-}
-
-@media (max-width: 376px) {
-    .player_info {
-        padding: 16px;
-    }
-
-    .player_name {
-        font-size: 30px;
-    }
-
-    .player_position {
-        font-size: .8rem;
-    }
-
-    .player_number {
-        font-size: 2.5rem;
-    }
-
-    .stats_title {
-        font-size: .8rem;
-    }
-
-    .stats_number {
-        font-size: 2rem;
-    }
-
-    .team_navigation {
-        padding: 2rem;
-    }
-
-    .player_img {
-        width: 250px;
-    }
-
-    .icon {
-        width: 1.3rem;
-        height: 1.3rem;
-    }
-
-    .player-nav_btn-title {
-        font-size: 1rem;
-    }
-
-    .player_bio_img {
-        max-width: 300px;
-    }
-
-    .bio_title {
-        font-size: 1.5rem;
-    }
-
-    .bio_text {
-        font-size: 1.1rem;
-    }
-}
-
-@media (max-width: 321px) {
-    .player_info {
-        padding: 12px;
-    }
-
-    .player_name {
-        font-size: 25px;
-    }
-
-    .player_position {
-        font-size: .6rem;
-    }
-
-    .player_number {
-        font-size: 2rem;
-    }
-
-    .stats_title {
-        font-size: .6rem;
-    }
-
-    .stats_number {
-        font-size: 1.5rem;
-    }
-
-    .team_navigation {
-        padding: 1.6rem;
-    }
-
-    .player_img {
-        width: 200px;
-    }
-
-    .icon {
-        width: 1rem;
-        height: 1rem;
-    }
-
-    .player-nav_btn-title {
-        font-size: .8rem;
-    }
-
-    .player_bio_img {
-        max-width: 250px;
-    }
-
-    .bio_title {
-        font-size: 1.2rem;
-        line-height: 1.7rem;
-    }
-
-    .bio_text {
-        font-size: .8rem;
-        line-height: 1.5rem;
-    }
-}
+@import "../field-players-details/field-players-details.component.scss";
