--- a/src/app/components/details/field-players-details/field-players-details.component.html
+++ b/src/app/components/details/field-players-details/field-players-details.component.html
@@ -60,5 +60,31 @@
                 <span class="player-nav_btn-title">{{ 'team.squad' | translate }}</span>
             </button>
         </div>
+
+        <div class="next_player" *ngIf="fieldPlayer.id != 25">
+            <a [routerLink]='"fieldPlayer/" + (fieldPlayer.id + 1)' class="routerLink">
+                <button class="player-nav_btn">
+                    <svg class="icon" viewBox="0 0 20 18">
+                        <path
+                            d="M7.1 3.9a2.7 2.7 0 015.4 0 2.6 2.6 0 01-2.7 2.6 2.6 2.6 0 01-2.7-2.6zM3.7 5.2a2.6 2.6 0 002.7-2.6A2.7 2.7 0 003.7 0 2.7 2.7 0 001 2.6a2.6 2.6 0 002.7 2.6zm3.4 1.6h.4c-.2-.3-.5-.6-.8-.6H.9a.9.9 0 00-.9.9v4a.9.9 0 00.3.6l1.3.9v3.9a.5.5 0 00.5.5h3.3a.6.6 0 00.6-.5v-3.3a1 1 0 01-.4-.9v-4a1.5 1.5 0 011.5-1.5zm9.2-1.6A2.6 2.6 0 0019 2.6a2.7 2.7 0 00-5.4 0 2.5 2.5 0 002.7 2.6zm2.8 1h-5.8a.8.8 0 00-.8.6h.4a1.5 1.5 0 011.5 1.5v4a1.1 1.1 0 01-.4.9v3.3a.6.6 0 00.6.5h3.3a.5.5 0 00.5-.5v-4l1.3-.9a.5.5 0 00.3-.5V7a.9.9 0 00-.9-.8zm-6.4 1H7a.9.9 0 00-.9.8v4.1a.9.9 0 00.3.6l1.3.9v3.9a.5.5 0 00.5.5h3.3a.5.5 0 00.5-.5v-3.9l1.3-.9a.9.9 0 00.3-.6V8a1 1 0 00-.9-.8z">
+                        </path>
+                    </svg>
+                    <span class="player-nav_btn-title">Next player</span>
+                </button>
+            </a>
+        </div>
+
+        <div class="next_player" *ngIf="fieldPlayer.id == 25">
+            <a [routerLink]='"goalkeeper/" + 1' class="routerLink">
+                <button class="player-nav_btn">
+                    <svg class="icon" viewBox="0 0 20 18">
+                        <path
+                            d="M7.1 3.9a2.7 2.7 0 015.4 0 2.6 2.6 0 01-2.7 2.6 2.6 2.6 0 01-2.7-2.6zM3.7 5.2a2.6 2.6 0 002.7-2.6A2.7 2.7 0 003.7 0 2.7 2.7 0 001 2.6a2.6 2.6 0 002.7 2.6zm3.4 1.6h.4c-.2-.3-.5-.6-.8-.6H.9a.9.9 0 00-.9.9v4a.9.9 0 00.3.6l1.3.9v3.9a.5.5 0 00.5.5h3.3a.6.6 0 00.6-.5v-3.3a1 1 0 01-.4-.9v-4a1.5 1.5 0 011.5-1.5zm9.2-1.6A2.6 2.6 0 0019 2.6a2.7 2.7 0 00-5.4 0 2.5 2.5 0 002.7 2.6zm2.8 1h-5.8a.8.8 0 00-.8.6h.4a1.5 1.5 0 011.5 1.5v4a1.1 1.1 0 01-.4.9v3.3a.6.6 0 00.6.5h3.3a.5.5 0 00.5-.5v-4l1.3-.9a.5.5 0 00.3-.5V7a.9.9 0 00-.9-.8zm-6.4 1H7a.9.9 0 00-.9.8v4.1a.9.9 0 00.3.6l1.3.9v3.9a.5.5 0 00.5.5h3.3a.5.5 0 00.5-.5v-3.9l1.3-.9a.9.9 0 00.3-.6V8a1 1 0 00-.9-.8z">
+                        </path>
+                    </svg>
+                    <span class="player-nav_btn-title">Next player</span>
+                </button>
+            </a>
+        </div>
     </div>
 </main>
