--- a/src/app/components/details/field-players-details/field-players-details.component.html
+++ b/src/app/components/details/field-players-details/field-players-details.component.html
@@ -61,7 +61,8 @@
             </button>
         </div>
 
-        <div class="next_player" *ngIf="fieldPlayer.id != 25">
+        <!-- TODO -->
+        <!-- <div class="next_player" *ngIf="fieldPlayer.id != 25">
             <a [routerLink]='"fieldPlayer/" + (fieldPlayer.id + 1)' class="routerLink">
                 <button class="player-nav_btn">
                     <svg class="icon" viewBox="0 0 20 18">
@@ -85,6 +86,7 @@
                     <span class="player-nav_btn-title">Next player</span>
                 </button>
             </a>
-        </div>
+        </div> -->
+
     </div>
 </main>
