--- a/src/app/components/details/goalkeepers-details/goalkeepers-details.component.html
+++ b/src/app/components/details/goalkeepers-details/goalkeepers-details.component.html
@@ -61,10 +61,11 @@
             </button>
         </div>
         
-        <div class="next_player" *ngIf="goalkeeper.id == 1">
-            <!-- (click)="reloadCurrentPage()" -->
+        <!-- TODO -->
+        <!-- (click)="reloadCurrentPage()" -->
+        <!-- <img class="next_player_img" [src]="goalkeeper.detailsImg"> -->
+        <!-- <div class="next_player" *ngIf="goalkeeper.id == 1">
             <a [routerLink]='"goalkeeper/" + (goalkeeper.id + 1)' class="routerLink">
-                <!-- <img class="next_player_img" [src]="goalkeeper.detailsImg"> -->
                 <button class="player-nav_btn" >
                     <svg class="icon" viewBox="0 0 20 18">
                         <path
@@ -87,7 +88,7 @@
                     <span class="player-nav_btn-title">Next player</span>
                 </button>
             </a>
-        </div>
+        </div> -->
 
     </div>
 </main>
