--- a/src/app/components/cards/cards-field-players/cards-field-players.component.scss
+++ b/src/app/components/cards/cards-field-players/cards-field-players.component.scss
@@ -103,9 +103,6 @@
     display: flex;
     text-align: center;
     justify-content: center;
-    padding: 10px;
-    padding-top: 0px;
-    padding-bottom: 0px;
     transform: translate(0px, 100%);
     transition: transform 0.5s;
 }
@@ -124,6 +121,10 @@
     margin-right: 0px;
     margin-top: 5px;
     margin-bottom: 5px;
+}
+
+.stats_title {
+    font-size: .9rem;
 }
 
 @media (max-width: 376px) {
