--- a/src/app/components/cards/card-coach/card-coach.component.scss
+++ b/src/app/components/cards/card-coach/card-coach.component.scss
@@ -1,1 +1,189 @@
-@import "../cards-field-players/cards-field-players.component.scss"
+// @import "../cards-field-players/cards-field-players.component.scss";
+
+// .team-person__info {
+//     transform: translateY(0);
+//     text-align: center;
+//     color: #fff;
+//     margin-bottom: 0px;
+//     transition: transform 0.5s;
+// }
+
+// .itemBox:hover .team-person__info {
+//     transform: translate(0px, -50px);
+// }
+
+.itemBox {
+    position: relative;
+    width: 300px;
+    height: 300px;
+    margin: 10px 6px;
+    display: block;
+    overflow: hidden;
+    transition: transform 0.5s;
+    transition: .5s;
+    border: solid;
+    border-image-slice: 1;
+    border-image-source: linear-gradient(to right, #cd122d 0, #154284);
+}
+
+.itemBox:hover {
+    border-image-source: linear-gradient(to left, #cd122d 0, #154284);
+}
+
+.itemBox img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.team-person__text {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgb(0,0,0);
+    background: linear-gradient(180deg,rgba(0,0,0,0) 0%,rgb(0,0,0) 80%);
+}
+
+.team-person__info {
+    transform: translateY(0);
+    text-align: center;
+    color: #fff;
+    margin-bottom: 0px;
+    transition: transform 0.5s;
+}
+
+.itemBox:hover .team-person__info {
+    transform: translate(0px, -50px);
+}
+
+.team-person__info-top {
+    padding: 0 0.8rem;
+    color: #fff;
+    margin-bottom: 0px;
+}
+
+.back-name {
+    font-size: 5rem;
+    font-style: italic;
+    color: hsla(0, 0%, 100%, .20);
+    position: absolute;
+    line-height: 5rem;
+    left: 50%;
+    transform: translateX(-52%);
+    bottom: 2.5rem;
+    text-transform: uppercase;
+    width: 116%;
+    overflow: hidden;
+}
+
+.coach-number {
+    display: block;
+    margin-right: 0.6rem;
+    font-size: 2rem;
+    font-weight: bold;
+    background: linear-gradient(180deg, hsla(0, 0%, 100%, .5), rgba(0, 0, 0, .2)), linear-gradient(#fff, #fff);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    color: #fff;
+}
+
+.coach-name {
+    display: block;
+    margin-right: 0.6rem;
+    font-size: 2rem;
+}
+
+.coach_last-name {
+    display: block;
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+.team-person__info-bottom {
+    padding-left: 0;
+    margin-top: 0;
+    margin-bottom: 5px;
+}
+
+.coach-position {
+    font-size: 1.4rem;
+    display: inline;
+    opacity: .8;
+    list-style-type: none;
+}
+
+@media (max-width: 376px) {
+    .itemBox {
+        width: 250px;
+        height: 250px;
+    }
+
+    .team-person__info {
+        transform: translate(0px, 3px);
+    }
+
+    .back-name {
+        font-size: 3rem;
+        line-height: 2rem;
+    }
+
+    .coach-number {
+        font-size: 1.5rem;
+    }
+
+    .coach-name {
+        font-size: 1.5rem;
+    }
+
+    .coach_last-name {
+        font-size: 1.5rem;
+    }
+
+    .coach-position {
+        font-size: 1rem;
+    }
+
+    .itemBox:hover .team-person__info {
+        transform: translate(0px, -10px);
+    }
+}
+
+@media (max-width: 321px) {
+    .itemBox {
+        width: 200px;
+        height: 200px;
+    }
+
+    .team-person__info {
+        transform: translate(0px, 3px);
+    }
+
+    .back-name {
+        font-size: 2.5rem;
+        line-height: 2rem;
+    }
+
+    .coach-number {
+        font-size: 1.2rem;
+    }
+
+    .coach-name {
+        font-size: 1.2rem;
+    }
+
+    .coach_last-name {
+        font-size: 1.2rem;
+    }
+
+    .coach-position {
+        font-size: 0.8rem;
+    }
+
+    .itemBox:hover .team-person__info {
+        transform: translate(0px, -10px);
+    }
+}
