--- a/src/app/components/cards/cards-goalkeepers/cards-goalkeepers.component.html
+++ b/src/app/components/cards/cards-goalkeepers/cards-goalkeepers.component.html
@@ -1,3 +1,6 @@
+<!-- <p> home page inside view ! </p>
+<router-outlet> </router-outlet>
+<button type="button" [routerLink]='"goalkeeper/" + goalkeeper.id'>Go To Child</button> -->
 <div class="itemBox">
     <a [routerLink]='"goalkeeper/" + goalkeeper.id'>
         <img [src]="goalkeeper.img">
