--- a/src/app/components/details/goalkeepers-details/goalkeepers-details.component.html
+++ b/src/app/components/details/goalkeepers-details/goalkeepers-details.component.html
@@ -72,7 +72,7 @@
         <!-- TODO -->
         <!-- (click)="reloadCurrentPage()" -->
         <!-- <img class="next_player_img" [src]="goalkeeper.detailsImg"> -->
-        <div class="next_player" *ngIf="id == 1">
+        <!-- <div class="next_player" *ngIf="id == 1">
             <a [routerLink]='"goalkeeper/" + nextPlayerId' class="routerLink">
                 <button class="player-nav_btn" >
                     <svg class="icon" viewBox="0 0 20 18">
@@ -96,7 +96,7 @@
                     <span class="player-nav_btn-title">Next player</span>
                 </button>
             </a>
-        </div>
+        </div> -->
 
     </div>
 </main>
