--- a/src/app/components/details/field-players-details/field-players-details.component.scss
+++ b/src/app/components/details/field-players-details/field-players-details.component.scss
@@ -195,7 +195,8 @@ ul {
 }
 
 .bio_title {
-    font-size: 1.8rem;
+    font-size: 1.4rem;
+    text-align: justify;
     font-weight: bold;
     line-height: 2.2rem;
     background: linear-gradient(90deg, #cd122d, #154284);
@@ -207,8 +208,9 @@ ul {
 
 .bio_text {
     height: auto;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     line-height: 2rem;
+    text-align: justify;
 }
 
 
@@ -247,11 +249,13 @@ ul {
     }
 
     .bio_title {
-        font-size: 1.5rem;
+        font-size: 1.2rem;
+        line-height: 1.8rem;
+        text-align: justify;
     }
 
     .bio_text {
-        font-size: 1.1rem;
+        font-size: 1rem;
     }
 }
 
@@ -290,8 +294,9 @@ ul {
     }
 
     .bio_title {
-        font-size: 1.2rem;
-        line-height: 1.7rem;
+        font-size: 1rem;
+        line-height: 1.5rem;
+        text-align: justify;
     }
 
     .bio_text {
