--- a/src/app/components/details/goalkeepers-details/goalkeepers-details.component.html
+++ b/src/app/components/details/goalkeepers-details/goalkeepers-details.component.html
@@ -68,7 +68,7 @@
                     </svg>
                 </div>
             </a>
-            <a [routerLink]='""' class="player_link">
+            <a href="#" class="player_link">
                 <div class="back_to_squad_btn">
                     <svg class="icon" viewBox="0 0 20 18">
                         <path
@@ -96,7 +96,7 @@
                     </svg>
                 </div>
             </a>
-            <a [routerLink]='""' class="player_link">
+            <a href="#" class="player_link">
                 <div class="back_to_squad_btn">
                     <svg class="icon" viewBox="0 0 20 18">
                         <path
