--- a/src/app/components/details/field-players-details/field-players-details.component.html
+++ b/src/app/components/details/field-players-details/field-players-details.component.html
@@ -59,7 +59,7 @@
                     </svg>
                 </div>
             </a>
-            <a [routerLink]='""' class="player_link">
+            <a href="#" class="player_link">
                 <div class="back_to_squad_btn">
                     <svg class="icon" viewBox="0 0 20 18">
                         <path
@@ -87,7 +87,7 @@
                     </svg>
                 </div>
             </a>
-            <a [routerLink]='""' class="player_link">
+            <a href="#" class="player_link">
                 <div class="back_to_squad_btn">
                     <svg class="icon" viewBox="0 0 20 18">
                         <path
@@ -115,7 +115,7 @@
                     </svg>
                 </div>
             </a>
-            <a [routerLink]='""' class="player_link">
+            <a href="#" class="player_link">
                 <div class="back_to_squad_btn">
                     <svg class="icon" viewBox="0 0 20 18">
                         <path
