--- a/src/app/components/details/field-players-details/field-players-details.component.scss
+++ b/src/app/components/details/field-players-details/field-players-details.component.scss
@@ -123,53 +123,6 @@ ul {
     font-size: 0;
 }
 
-// .previous_player_nav__player {
-//     visibility: hidden;
-//     display: inline-block;
-//     vertical-align: top;
-//     position: relative;
-//     background-image: linear-gradient(270deg,#154284,#181733);
-// }
-
-// .previous_player_nav__name {
-//     font-size: 1rem;
-//     line-height: 3rem;
-//     max-width: 0;
-//     text-overflow: ellipsis;
-//     transition: max-width .3s ease-out, padding .3s ease-out;
-// }
-
-// .previous_player_nav_img {
-//     max-height: 5rem;
-//     // position: absolute;
-//     // bottom: 0;
-//     // padding-left: .5rem;
-//     position: absolute;
-//     bottom: 0;
-//     right: -8rem;
-//     padding-right: 1rem;
-//     transition: right .3s ease-out;
-// }
-
-// @media (min-width: 768px) {
-//     .player_link:hover {
-//         .previous_player_nav__name {
-//             max-width: 30rem;
-//             padding-right: 5rem;
-//             padding-left: .5rem;
-//         }
-
-//         .previous_player_nav_img {
-//             right: 0;
-//         }
-    
-//         .previous_player_nav__player {
-//             visibility: visible;
-//             opacity: 1;
-//         }
-//     }
-// }
-
 .next_player_nav__player {
     display: inline-block;
     visibility: hidden;
@@ -300,7 +253,7 @@ ul {
 
 .content_media {
     padding: 25px;
-    // background-image: url("../../../../assets/images/stripes.png");
+    background-image: url("../../../../assets/images/stripes.png");
     background-size: contain;
     background-repeat: no-repeat;
 }
