--- a/src/app/components/details/field-players-details/field-players-details.component.html
+++ b/src/app/components/details/field-players-details/field-players-details.component.html
@@ -52,7 +52,7 @@
 
         <!-- TODO -->
         <div class="navigation_players" *ngIf="id == 3">
-            <a [routerLink]='"goalkeeper/" + previousPlayerId' class="player_link">
+            <a [routerLink]='"goalkeeper/" + previousPlayer.id' class="player_link">
                 <div class="player_btn previous_player">
                     <svg class="icon" viewBox="0 0 12.1 8.9">
                         <path d="M12.1 3.8v1.4H2.6l2.9 2.7-1 1L0 4.4 4.5 0l1 .9-3 2.9h9.6z"></path>
@@ -71,7 +71,7 @@
                 </div>
             </a>
 
-            <a [routerLink]='"fieldPlayer/" + nextPlayerId' class="player_link">
+            <a [routerLink]='"fieldPlayer/" + nextPlayer.id' class="player_link">
                 <div class="next_player_nav__player">
                     <div class="next_player_content">
                         <img class="next_player_nav_img" [src]="nextPlayer.detailsImg">
@@ -91,7 +91,7 @@
         </div>
         
         <div class="navigation_players" *ngIf="id > 3 && id != 25">
-            <a [routerLink]='"fieldPlayer/" + previousPlayerId' class="player_link">
+            <a [routerLink]='"fieldPlayer/" + previousPlayer.id' class="player_link">
                 <div class="player_btn previous_player">
                     <svg class="icon" viewBox="0 0 12.1 8.9">
                         <path d="M12.1 3.8v1.4H2.6l2.9 2.7-1 1L0 4.4 4.5 0l1 .9-3 2.9h9.6z"></path>
@@ -110,7 +110,7 @@
                 </div>
             </a>
 
-            <a [routerLink]='"fieldPlayer/" + nextPlayerId' class="player_link">
+            <a [routerLink]='"fieldPlayer/" + nextPlayer.id' class="player_link">
                 <div class="next_player_nav__player">
                     <div class="next_player_content">
                         <img class="next_player_nav_img" [src]="nextPlayer.detailsImg">
@@ -130,7 +130,7 @@
         </div>
 
         <div class="navigation_players" *ngIf="id == 25">
-            <a [routerLink]='"fieldPlayer/" + previousPlayerId' class="player_link">
+            <a [routerLink]='"fieldPlayer/" + previousPlayer.id' class="player_link">
                 <div class="player_btn previous_player">
                     <svg class="icon" viewBox="0 0 12.1 8.9">
                         <path d="M12.1 3.8v1.4H2.6l2.9 2.7-1 1L0 4.4 4.5 0l1 .9-3 2.9h9.6z"></path>
@@ -149,7 +149,7 @@
                 </div>
             </a>
             
-            <a [routerLink]='"goalkeeper/" + nextPlayerId' class="player_link">
+            <a [routerLink]='"goalkeeper/" + nextPlayer.id' class="player_link">
                 <div class="next_player_nav__player">
                     <div class="next_player_content">
                         <img class="next_player_nav_img" [src]="nextPlayer.detailsImg">
