--- a/src/app/components/details/goalkeepers-details/goalkeepers-details.component.html
+++ b/src/app/components/details/goalkeepers-details/goalkeepers-details.component.html
@@ -59,7 +59,7 @@
         </div>
 
         <div class="navigation_players" *ngIf="id == 1">
-            <a [routerLink]='"fieldPlayer/" + previousPlayerId' class="player_link">
+            <a [routerLink]='"fieldPlayer/" + previousPlayer.id' class="player_link">
                 <div class="player_btn previous_player">
                     <svg class="icon" viewBox="0 0 12.1 8.9">
                         <path d="M12.1 3.8v1.4H2.6l2.9 2.7-1 1L0 4.4 4.5 0l1 .9-3 2.9h9.6z"></path>
@@ -76,7 +76,7 @@
                     <span class="player-nav_btn-title">{{ 'team.squad' | translate }}</span>
                 </div>
             </a>
-            <a [routerLink]='"goalkeeper/" + nextPlayerId' class="player_link">
+            <a [routerLink]='"goalkeeper/" + nextPlayer.id' class="player_link">
                 <div class="next_player_nav__player">
                     <div class="next_player_content">
                         <img class="next_player_nav_img" [src]="nextPlayer.detailsImg">
@@ -96,7 +96,7 @@
         </div>
 
         <div class="navigation_players" *ngIf="id == 2">
-            <a [routerLink]='"goalkeeper/" + previousPlayerId' class="player_link">
+            <a [routerLink]='"goalkeeper/" + previousPlayer.id' class="player_link">
                 <div class="player_btn previous_player">
                     <svg class="icon" viewBox="0 0 12.1 8.9">
                         <path d="M12.1 3.8v1.4H2.6l2.9 2.7-1 1L0 4.4 4.5 0l1 .9-3 2.9h9.6z"></path>
@@ -104,7 +104,7 @@
                 </div>
                 <!-- TODO -->
                 <!-- <div class="previous_player_nav__player">
-                    <div class="next_player_content">
+                    <div class="previous_player_content">
                         <div class="previous_player_nav__name">
                             <span class="previous_player_name">{{ previousPlayer.name + " " +
                                 previousPlayer.surname}}</span>
@@ -125,7 +125,7 @@
                 </div>
             </a>
 
-            <a [routerLink]='"fieldPlayer/" + nextPlayerId' class="player_link">
+            <a [routerLink]='"fieldPlayer/" + nextPlayer.id' class="player_link">
                 <div class="next_player_nav__player">
                     <div class="next_player_content">
                         <img class="next_player_nav_img" [src]="nextPlayer.detailsImg">
