--- a/src/app/components/details/goalkeepers-details/goalkeepers-details.component.html
+++ b/src/app/components/details/goalkeepers-details/goalkeepers-details.component.html
@@ -57,8 +57,9 @@
                 </div>
             </div>
         </div>
-
-        <div class="navigation_players" *ngIf="id == 1">
+        
+        <!-- pay attention to *ngIf (it's the clue)  -->
+        <div class="navigation_players" *ngIf="previousPlayer.position != 'goalkeeper' && nextPlayer.position == 'goalkeeper'">
             <a [routerLink]='"fieldPlayer/" + previousPlayer.id' class="player_link">
                 <div class="player_btn previous_player">
                     <svg class="icon" viewBox="0 0 12.1 8.9">
@@ -94,8 +95,47 @@
                 </div>
             </a>
         </div>
+        
+        <!-- pay attention to *ngIf (it's the clue)  -->
+        <div class="navigation_players" *ngIf="previousPlayer.position == 'goalkeeper' && nextPlayer.position == 'goalkeeper'">
+            <a [routerLink]='"goalkeeper/" + previousPlayer.id' class="player_link">
+                <div class="player_btn previous_player">
+                    <svg class="icon" viewBox="0 0 12.1 8.9">
+                        <path d="M12.1 3.8v1.4H2.6l2.9 2.7-1 1L0 4.4 4.5 0l1 .9-3 2.9h9.6z"></path>
+                    </svg>
+                </div>
+            </a>
+            <a href="#" class="player_link">
+                <div class="back_to_squad_btn">
+                    <svg class="icon" viewBox="0 0 20 18">
+                        <path
+                            d="M7.1 3.9a2.7 2.7 0 015.4 0 2.6 2.6 0 01-2.7 2.6 2.6 2.6 0 01-2.7-2.6zM3.7 5.2a2.6 2.6 0 002.7-2.6A2.7 2.7 0 003.7 0 2.7 2.7 0 001 2.6a2.6 2.6 0 002.7 2.6zm3.4 1.6h.4c-.2-.3-.5-.6-.8-.6H.9a.9.9 0 00-.9.9v4a.9.9 0 00.3.6l1.3.9v3.9a.5.5 0 00.5.5h3.3a.6.6 0 00.6-.5v-3.3a1 1 0 01-.4-.9v-4a1.5 1.5 0 011.5-1.5zm9.2-1.6A2.6 2.6 0 0019 2.6a2.7 2.7 0 00-5.4 0 2.5 2.5 0 002.7 2.6zm2.8 1h-5.8a.8.8 0 00-.8.6h.4a1.5 1.5 0 011.5 1.5v4a1.1 1.1 0 01-.4.9v3.3a.6.6 0 00.6.5h3.3a.5.5 0 00.5-.5v-4l1.3-.9a.5.5 0 00.3-.5V7a.9.9 0 00-.9-.8zm-6.4 1H7a.9.9 0 00-.9.8v4.1a.9.9 0 00.3.6l1.3.9v3.9a.5.5 0 00.5.5h3.3a.5.5 0 00.5-.5v-3.9l1.3-.9a.9.9 0 00.3-.6V8a1 1 0 00-.9-.8z">
+                        </path>
+                    </svg>
+                    <span class="player-nav_btn-title">{{ 'team.squad' | translate }}</span>
+                </div>
+            </a>
+            <a [routerLink]='"goalkeeper/" + nextPlayer.id' class="player_link">
+                <div class="next_player_nav__player">
+                    <div class="next_player_content">
+                        <img class="next_player_nav_img" [src]="nextPlayer.detailsImg">
+                        <div class="next_player_nav__name">
+                            <span class="next_player_name">{{ nextPlayer.name + " " + nextPlayer.surname}}</span>
+                        </div>
+                    </div>
+                </div>
 
-        <div class="navigation_players" *ngIf="id == 2">
+                <div class="player_btn next_player">
+                    <svg class="icon" viewBox="0 0 12.14 8.86">
+                        <path fill-rule="evenodd"
+                            d="M9.63 3.82L6.68.93 7.63 0l4.51 4.43-4.51 4.43-.95-.92 2.81-2.76H0V3.82h9.63z"></path>
+                    </svg>
+                </div>
+            </a>
+        </div>
+
+        <!-- pay attention to *ngIf (it's the clue)  -->
+        <div class="navigation_players" *ngIf="previousPlayer.position == 'goalkeeper' && nextPlayer.position != 'goalkeeper'">
             <a [routerLink]='"goalkeeper/" + previousPlayer.id' class="player_link">
                 <div class="player_btn previous_player">
                     <svg class="icon" viewBox="0 0 12.1 8.9">
